@@ -9,10 +9,14 @@ apple_creds_file = /Users/bassie/.secret/.applecreds
 # home_location = lattitude,longitude
 home_location = 51.541384,5.454664
 
-# only request updates once an hour when at home between the specified times
+# [optional] Only request updates once an hour when at home between the specified times
 low_updates_when_home=22:30-07:00
 
 # multiple devices possible, each on one line
 devices_to_monitor =
     iPhone Bassie,http://localhost:8080/json.htm?type=command&param=udevice&idx=503&nvalue=0&svalue=__DISTANCE__
     iPhone Adriaan,http://localhost:8080/json.htm?type=command&param=udevice&idx=504&nvalue=0&svalue=__DISTANCE__
+
+# [Optional] When set to false the call to the server will be skipped
+# this can be useful for debugging purposes
+send_to_server = False
